fix(styles): ie temp fix align-items-center

--- a/src/scss/_ie-fix.scss
+++ b/src/scss/_ie-fix.scss
@@ -1,3 +1,3 @@
-html body .align-items-center {
+html body .app.flex-row.align-items-center {
   height: 100vh;
 }
